# NovelAI-SD-DiscordBot

./: .gitignore  .gitmodules  README.md  example.env  example_config.yml  main.py  pyproject.toml
backend/: boilerplate.py  novelai.py  webui.py
cogs/: help.py  link_expand.py  locale.py  nai.py  reaction.py  sd.py  test.py
config/: load_config.py
locales/: en.yml  ena.yml  ja.yml
utils/: checks.py  locale.py  logger.py  prompt.py
