[tool.poetry]
name = "aiimagebot"
version = "0.1.0"
description = ""
authors = ["PurplePalette"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
"discord.py" = "^2.1.0"
python-dotenv = "^0.21.0"
aiohttp = "^3.8.3"
pyyaml = "^6.0"
google-cloud-translate = "^3.9.0"

[tool.poetry.group.dev.dependencies]
novelai-api = "^0.10.2"
black = "^22.12.0"
isort = "^5.11.4"
mypy = "^0.991"
pytest = "^7.2.0"
pyproject-flake8 = "^6.0.0.post1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 200
max-complexity = 18
